--- a/Application/apexapplication/pubspec.yaml
+++ b/Application/apexapplication/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_switch: ^0.1.2
   provider: ^4.3.1
   responsive_builder: ^0.3.0
+
 
 dev_dependencies:
   flutter_test:
