--- a/Application/apexapplication/pubspec.yaml
+++ b/Application/apexapplication/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter_switch: ^0.1.2
   provider: ^4.3.1
   responsive_builder: ^0.3.0
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0
+  cloud_firestore: ^0.14.0
+  firebase_storage: ^4.0.1
 
 
 dev_dependencies:
